[package]
name = "osynic_serializer"
version = "0.1.2"
edition = "2024"
authors = ["Hako Chest <zoneherobrine@gmail.com>"]
rust-version = "1.85.0"
description = "A osu beatmapsets serializer lib & TUI application based on osynic_osudb"
keywords = ["osynic", "serializer", "tui", "osudb","diff"]
categories = ["games","command-line-utilities"]
license = "MIT"
documentation = "https://docs.rs/osynic_serializer"
repository = "https://github.com/osynicite/osynic_serializer"

[[bin]]
name = "osynic-sl"
path = "src/main.rs"

[lib]
name = "osynic_serializer"
path = "src/lib.rs"

[dependencies]

whoami = "1.6.1"
sys-info =  "0.9.1"
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
osynic_osudb = "0.1.3"

clap = {version="4.5.45", features = ["derive"],optional = true}
[features]
default = ["full"]
full = ["tui","cli"]
tui = ["clap"]
cli = []